...
  }

  Padding loadMoreButton(allData) {
    return Padding(
      padding: EdgeInsets.only(bottom: 20),
      child: ElevatedButton(
        key: const Key('load_more'),
        style: ButtonStyle(
          shape: WidgetStateProperty.all<RoundedRectangleBorder>(
            RoundedRectangleBorder(borderRadius: BorderRadius.circular(6.0)),
          ),
        ),
        onPressed: () {
...
            _currentPage > (allData / apiPageSize)
                ? _currentPage
                : (allData / apiPageSize).toInt() + 1,
            false,
          );
        },
        child: Text("Load More", style: TextStyle(fontSize: 20.0)),
      ),
    );
  }

  Center terminalPostNote(BuildContext context) {
    return Center(
...
